--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev": "node src/app.js",
+    "start": "node src/app.js",
     "install-sql": "mysql -u root -p < sql/movie.sql"
   },
   "dependencies": {
